--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "lofi-html",
-  "version": "1.0.0",
-  "description": "Basic HTML package with browser-sync and some reset.css",
+  "version": "2.0.0",
+  "description": "Basic frontend boilerplate built with parcel",
   "main": "script.js",
   "scripts": {
-    "start": "browser-sync start --server --files '*.css, *.html, *.js, !node_modules/**/*'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,10 @@
     "url": "https://github.com/lofisoul/lofi-html/issues"
   },
   "homepage": "https://github.com/lofisoul/lofi-html#readme",
-  "dependencies": {
-    "browser-sync": "^2.26.10"
+  "dependencies": {},
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.1",
+    "node-sass": "^6.0.1",
+    "parcel": "^2.0.1"
   }
 }
