--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.1",
     "node-sass": "^6.0.1",
-    "parcel": "^2.0.1"
+    "parcel": "^2.0.1",
+    "prettier": "^2.4.1"
   }
 }
